add branding and license notice

--- a/fr.obeo.releng.targetplatform-feature/build.properties
+++ b/fr.obeo.releng.targetplatform-feature/build.properties
@@ -1,1 +1,17 @@
-bin.includes = feature.xml
+################################################################################
+# Copyright (c) 2006, 2012 Obeo.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     Obeo - initial API and implementation
+################################################################################
+bin.includes = obeo32.png,\
+               epl-v10.html,\
+               feature.properties,\
+               feature.xml,\
+               license.html,\
+               copyright.txt,\
+               about.html
