--- a/fr.obeo.releng.targetplatform/build.properties
+++ b/fr.obeo.releng.targetplatform/build.properties
@@ -1,6 +1,19 @@
-source.. = src/,\
-          src-gen/,\
-          xtend-gen/
-bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+bin.includes = .,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties,\
+               about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               obeo32.png
+jars.compile.order = .
+source.. = src-gen/,\
+           src/,\
+           xtend-gen/
+output.. = bin/
+src.includes = about.html,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               obeo32.png
