Fix #7: menu contribution now only appears on .targetplatform files.

--- a/fr.obeo.releng.targetplatform.ui/plugin.xml
+++ b/fr.obeo.releng.targetplatform.ui/plugin.xml
@@ -343,6 +343,9 @@
         <command
               commandId="fr.obeo.releng.targetplatform.ui.convertTargetPlatform"
               style="push">
+           <visibleWhen
+                 checkEnabled="true">
+           </visibleWhen>
         </command>
      </menuContribution>
   </extension>
