--- a/fr.obeo.releng.targetplatform/about.properties
+++ b/fr.obeo.releng.targetplatform/about.properties
@@ -1,7 +1,7 @@
 # /**
 #  * <copyright>
 #  *
-#  * Copyright (c) 2012 Obeo and others.
+#  * Copyright (c) 2012, 2013 Obeo and others.
 #  * All rights reserved.   This program and the accompanying materials
 #  * are made available under the terms of the Eclipse Public License v1.0
 #  * which accompanies this distribution, and is available at
@@ -15,15 +15,14 @@
 
 # NLS_MESSAGEFORMAT_VAR
 
-featureName=Obeo Target Platform Definition DSL and Generator
+featureName=Target Platform Definition DSL and Generator
 
-featureText=Obeo Target Platform Definition DSL and Generator\n\
+featureText=Target Platform Definition DSL and Generator\n\
 Version: {featureVersion}\n\
-Build id: {0}\n\
 \n\
-(c) Copyright Obeo and others. 2012.  All rights reserved.\n\
+(c) Copyright Obeo and others. 2012, 2013.  All rights reserved.\n\
 \n\
-Obeo Target Platform Definition DSL and Generator provides a DSL \
+Target Platform Definition DSL and Generator provides a DSL \
 with an advanced editor and a generator taking this DSL as input and generating a .target \
 file that PDE is able to read to provision a Target Platform.\n\
-Visit http://github.com/Obeo/fr.obeo.releng.targetplatform
+Visit http://github.com/mbarbero/fr.obeo.releng.targetplatform
