Remove need of String for versions

--- a/fr.obeo.releng.targetplatform/build.properties
+++ b/fr.obeo.releng.targetplatform/build.properties
@@ -1,4 +1,5 @@
-bin.includes = .,\
+bin.includes = model/,\
+               .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
