--- a/fr.obeo.releng.targetplatform-feature/pom.xml
+++ b/fr.obeo.releng.targetplatform-feature/pom.xml
@@ -6,10 +6,10 @@
     <artifactId>releng.targetplatform-parent</artifactId>
     <groupId>fr.obeo.releng.targetplatform</groupId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../fr.obeo.releng.targetplatform-parent</relativePath>
+    <relativePath>../fr.obeo.releng.targetplatform-parent</relativePath>
   </parent>
   <groupId>fr.obeo.releng.targetplatform</groupId>
-  <artifactId>fr.obeo.releng.targetplatform-feature_3.7</artifactId>
+  <artifactId>fr.obeo.releng.targetplatform-feature_3.8</artifactId>
   <version>1.2.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
   
@@ -29,7 +29,7 @@
 	          <artifactId>releng.targetplatform-parent</artifactId>
               <groupId>fr.obeo.releng.targetplatform</groupId>
 	          <version>1.0.0-SNAPSHOT</version>
-	          <classifier>targetdefinitions/indigo-3.7-sdk</classifier>
+	          <classifier>targetdefinitions/juno-4.2-sdk</classifier>
 	        </artifact>
 	      </target>
 	    </configuration>
