--- a/fr.obeo.releng.targetplatform-parent/pom.xml
+++ b/fr.obeo.releng.targetplatform-parent/pom.xml
@@ -37,27 +37,19 @@
     </licenses>
 
     <properties>
-        <tycho-version>0.18.1</tycho-version>
-        <tycho-extras-version>0.18.1</tycho-extras-version>
+        <tycho-version>0.19</tycho-version>
+        <tycho-extras-version>0.19</tycho-extras-version>
     </properties>
 
 
   <modules>
     <module>../fr.obeo.releng.targetplatform</module>
-    <module>../fr.obeo.releng.targetplatform.pde-util_3.6</module>
-    <module>../fr.obeo.releng.targetplatform.pde-util_3.7</module>
-    <module>../fr.obeo.releng.targetplatform.pde-util_3.8</module>
     <module>../fr.obeo.releng.targetplatform.ui</module>
 
     <module>../fr.obeo.releng.targetplatform.tests</module>
 
-    <module>../fr.obeo.releng.targetplatform-feature/3.6</module>
-    <module>../fr.obeo.releng.targetplatform-feature/3.7</module>
-    <module>../fr.obeo.releng.targetplatform-feature/3.8</module>
-    
-    <module>../fr.obeo.releng.targetplatform-update/3.6</module>
-    <module>../fr.obeo.releng.targetplatform-update/3.7</module>
-    <module>../fr.obeo.releng.targetplatform-update/3.8</module>
+    <module>../fr.obeo.releng.targetplatform-feature</module>
+    <module>../fr.obeo.releng.targetplatform-update</module>
   </modules>
 
   <build>
