--- a/fr.obeo.releng.targetplatform/plugin.xml
+++ b/fr.obeo.releng.targetplatform/plugin.xml
@@ -10,5 +10,18 @@
        genModel = "model/generated/TargetPlatform.genmodel" /> 
 	
   </extension>
+  
+  <extension
+        id="targetPlatform.converter"
+        point="org.eclipse.core.runtime.applications">
+     <application
+           cardinality="singleton-global"
+           thread="main"
+           visible="true">
+        <run
+              class="fr.obeo.releng.targetplatform.pde.ConverterApplication">
+        </run>
+     </application>
+  </extension>
 
 </plugin>
