--- a/fr.obeo.releng.targetplatform-feature/pom.xml
+++ b/fr.obeo.releng.targetplatform-feature/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <artifactId>releng.targetplatform-parent</artifactId>
     <groupId>fr.obeo.releng.targetplatform</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <relativePath>../fr.obeo.releng.targetplatform-parent</relativePath>
   </parent>
   <groupId>fr.obeo.releng.targetplatform</groupId>
-  <artifactId>fr.obeo.releng.targetplatform-feature_3.8</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <artifactId>fr.obeo.releng.targetplatform-feature</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
   
   <build>
@@ -19,21 +19,6 @@
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
       </plugin>
-      <plugin>
-	    <groupId>org.eclipse.tycho</groupId>
-	    <artifactId>target-platform-configuration</artifactId>
-	    <version>${tycho-version}</version>
-	    <configuration>
-	      <target>
-	        <artifact>
-	          <artifactId>releng.targetplatform-parent</artifactId>
-              <groupId>fr.obeo.releng.targetplatform</groupId>
-	          <version>1.0.0-SNAPSHOT</version>
-	          <classifier>targetdefinitions/juno-4.2-sdk</classifier>
-	        </artifact>
-	      </target>
-	    </configuration>
-	  </plugin>
     </plugins>
   </build>
 </project>
