--- a/fr.obeo.releng.targetplatform-update/pom.xml
+++ b/fr.obeo.releng.targetplatform-update/pom.xml
@@ -7,15 +7,15 @@
     <parent>
         <artifactId>releng.targetplatform-parent</artifactId>
         <groupId>fr.obeo.releng.targetplatform</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>../fr.obeo.releng.targetplatform-parent</relativePath>
     </parent>
 
-    <artifactId>fr.obeo.releng.targetplatform-update_3.8</artifactId>
+    <artifactId>fr.obeo.releng.targetplatform-update</artifactId>
     <packaging>eclipse-repository</packaging>
 
     <!-- see http://issues.sonatype.org/browse/TYCHO-313 -->
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <build>
         <plugins>
@@ -33,21 +33,6 @@
 		        <groupId>org.eclipse.tycho</groupId>
 		        <artifactId>tycho-source-plugin</artifactId>
 		      </plugin>
-		      <plugin>
-			    <groupId>org.eclipse.tycho</groupId>
-			    <artifactId>target-platform-configuration</artifactId>
-			    <version>${tycho-version}</version>
-			    <configuration>
-			      <target>
-			        <artifact>
-			          <artifactId>releng.targetplatform-parent</artifactId>
-		              <groupId>fr.obeo.releng.targetplatform</groupId>
-			          <version>1.0.0-SNAPSHOT</version>
-			          <classifier>targetdefinitions/juno-4.2-sdk</classifier>
-			        </artifact>
-			      </target>
-			    </configuration>
-			  </plugin>
         </plugins>
     </build>
     
