update build for 2.0.0

--- a/fr.obeo.releng.targetplatform-feature/feature.properties
+++ b/fr.obeo.releng.targetplatform-feature/feature.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     Obeo - initial API and implementation
 ################################################################################
-featureName = Target Platform Definition DSL and Generator for Eclipse 3.8/4.2 (Juno) and later
+featureName = Target Platform Definition DSL and Generator
 providerName = Obeo
 
 description = Target Platform Definition DSL and Generator provides a DSL \
