--- a/fr.obeo.releng.targetplatform.tests/pom.xml
+++ b/fr.obeo.releng.targetplatform.tests/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>releng.targetplatform-parent</artifactId>
@@ -12,43 +11,23 @@
   <artifactId>fr.obeo.releng.targetplatform.tests</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
-  
   <build>
-    <resources>
-	      <resource>
-	        <directory>src</directory>
-	        <excludes>
-	          <exclude>**/*.java</exclude>
-	        </excludes>
-	      </resource>
-	      <resource>
-	        <directory>src-gen</directory>
-	        <excludes>
-	          <exclude>**/*.java</exclude>
-	        </excludes>
-	      </resource>
-	      <resource>
-	        <directory>xtend-gen</directory>
-	        <excludes>
-	          <exclude>**/*.java</exclude>
-	        </excludes>
-	      </resource>
-	</resources>
     <plugins>
-	  	<plugin>
-			<groupId>org.eclipse.tycho</groupId>
-			<artifactId>tycho-surefire-plugin</artifactId>
-			<version>${tycho-version}</version>
-			<configuration>
-				<includes>
-					<include>fr/obeo/releng/targetplatform/tests/AllTests.class</include>
-					<include>fr/obeo/releng/targetplatform/tests/AllTest$WithRuntime.class</include>
-				</includes>	
-				<useUIHarness>true</useUIHarness>
-				<useUIThread>false</useUIThread>
-				<appArgLine>-Xmx1024m -XX:MaxPermSize=256m</appArgLine>
-			</configuration>
-		</plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-surefire-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <dependencies>
+            <dependency>
+              <type>p2-installable-unit</type>
+              <artifactId>org.eclipse.equinox.p2.transport.ecf</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+          </dependencies>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
