--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
-script: "mvn clean package -f fr.obeo.releng.targetplatform-parent/pom.xml"
+script: "mvn clean verify -f fr.obeo.releng.targetplatform-parent/pom.xml"
 install: true
