--- a/fr.obeo.releng.targetplatform-update/pom.xml
+++ b/fr.obeo.releng.targetplatform-update/pom.xml
@@ -1,40 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <artifactId>releng.targetplatform-parent</artifactId>
-        <groupId>fr.obeo.releng.targetplatform</groupId>
-        <version>2.0.0-SNAPSHOT</version>
-        <relativePath>../fr.obeo.releng.targetplatform-parent</relativePath>
-    </parent>
-
-    <artifactId>fr.obeo.releng.targetplatform-update</artifactId>
-    <packaging>eclipse-repository</packaging>
-
-    <!-- see http://issues.sonatype.org/browse/TYCHO-313 -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>releng.targetplatform-parent</artifactId>
+    <groupId>fr.obeo.releng.targetplatform</groupId>
     <version>2.0.0-SNAPSHOT</version>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-p2-repository-plugin</artifactId>
-                <version>${tycho-version}</version>
-                <configuration>
-                    <createArtifactRepository>true</createArtifactRepository>
-                    <finalName>${project.artifactId}</finalName>
-                    <compress>true</compress>
-                </configuration>
-            </plugin>
-            <plugin>
-		        <groupId>org.eclipse.tycho</groupId>
-		        <artifactId>tycho-source-plugin</artifactId>
-		      </plugin>
-        </plugins>
-    </build>
-    
+    <relativePath>../fr.obeo.releng.targetplatform-parent</relativePath>
+  </parent>
+  <artifactId>fr.obeo.releng.targetplatform-update</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
+  <packaging>eclipse-repository</packaging>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-p2-repository-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <repositoryName>Update site of ${project.artifactId}</repositoryName>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
-
