--- a/fr.obeo.releng.targetplatform.tests/build.properties
+++ b/fr.obeo.releng.targetplatform.tests/build.properties
@@ -2,4 +2,5 @@ source.. = src/,\
           src-gen/,\
           xtend-gen/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.properties
