update copyright year range

--- a/fr.obeo.releng.targetplatform-feature/feature.properties
+++ b/fr.obeo.releng.targetplatform-feature/feature.properties
@@ -16,7 +16,7 @@ with an advanced editor and a generator taking this DSL as input and generating 
 file that PDE is able to read to provision a Target Platform.
 
 copyrightURL = copyright.txt
-copyright = Copyright (c) 2012, 2013 Obeo, France. \n\
+copyright = Copyright (c) 2012-2014 Obeo, France. \n\
 All rights reserved. This program and the accompanying materials \n\
 are made available under the terms of the Eclipse Public License v1.0 \n\
 which accompanies this distribution, and is available at \n\
