Handle qualified name value conversion correctly.
It fixes #18. The source were not found because the escape character
were not stripped when parsed.

--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
@@ -2,3 +2,5 @@
 /.VersionRangeConverter.java._trace
 /.MySTRINGValueConverter.java._trace
 /.TargetPlatformSTRINGValueConverter.java._trace
+/.FQNConverter.java._trace
+/FQNConverter.java
