update copyright year

--- a/fr.obeo.releng.targetplatform/about.properties
+++ b/fr.obeo.releng.targetplatform/about.properties
@@ -20,7 +20,7 @@ featureName=Target Platform Definition DSL and Generator
 featureText=Target Platform Definition DSL and Generator\n\
 Version: {featureVersion}\n\
 \n\
-(c) Copyright Obeo and others. 2012, 2013.  All rights reserved.\n\
+(c) Copyright Obeo and others. 2012-2014.  All rights reserved.\n\
 \n\
 Target Platform Definition DSL and Generator provides a DSL \
 with an advanced editor and a generator taking this DSL as input and generating a .target \
