--- a/fr.obeo.releng.targetplatform-update/pom.xml
+++ b/fr.obeo.releng.targetplatform-update/pom.xml
@@ -17,7 +17,8 @@
         <artifactId>tycho-p2-repository-plugin</artifactId>
         <version>${tycho-version}</version>
         <configuration>
-          <repositoryName>Update site of ${project.artifactId}</repositoryName>
+          <repositoryName>Target Platform Definition DSL and Generator</repositoryName>
+          <finalName>${project.groupId}-${unqualifiedVersion}.${buildQualifier}</finalName>
         </configuration>
       </plugin>
     </plugins>
