--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 script: "mvn clean verify -f fr.obeo.releng.targetplatform-parent/pom.xml"
 install: true
-after_failure: .travis.print_surefire_reports.sh
+after_failure: travis.print_surefire_reports.sh
