--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 script: "mvn clean verify -f fr.obeo.releng.targetplatform-parent/pom.xml"
 install: true
-after_failure: echo "Current directory is $(pwd)" && echo "=== SUREFIRE REPORTS ===\n" && for F in target/surefire-reports/*.txt; do echo $F && cat $F && echo; done
+after_failure: echo "=== SUREFIRE REPORTS ===\n" && for F in fr.obeo.releng.targetplatform.tests/target/surefire-reports/*.txt; do echo $F && cat $F && echo; done
