Uses a custom XCore model instead of Xtext's generated ecore one.
It adds concepts of environment and is globaly backward compatible.

--- a/fr.obeo.releng.targetplatform/build.properties
+++ b/fr.obeo.releng.targetplatform/build.properties
@@ -11,6 +11,7 @@ bin.includes = model/,\
 jars.compile.order = .
 source.. = src-gen/,\
            src/,\
+           emf-gen/,\
            xtend-gen/
 output.. = bin/
 src.includes = about.html,\
