Adds basic support for environment in the grammar (with tests)

--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
@@ -3,3 +3,5 @@
 /.MySTRINGValueConverter.java._trace
 /.TargetPlatformSTRINGValueConverter.java._trace
 /.FQNConverter.java._trace
+/.ExecutionEnvironmentConverter.java._trace
+/.LocaleConverter.java._trace
