Handles generation of environments. Progress on issue #22

--- a/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/.gitignore
+++ b/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/.gitignore
@@ -1,7 +1,10 @@
 /.TestTargetConvertion.java._trace
 /.TestGrammar.java._trace
-/TestGrammar.java
-/TestTargetConvertion.java
 /.TestValidation.java._trace
 /.TestTargetPlatformIndexer.java._trace
-/TestValidation.java
+/.TestTargetGeneration.java._trace
+/.MockMetadataRepositoryManager.java._trace
+/.MockMetadataRepository.java._trace
+/.IQueryResultProvider.java._trace
+/.MockQueryResult.java._trace
+/.MockIU.java._trace
