--- a/fr.obeo.releng.targetplatform-parent/pom.xml
+++ b/fr.obeo.releng.targetplatform-parent/pom.xml
@@ -92,4 +92,15 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>macosx-jvm-flags</id>
+      <activation>
+        <os><family>mac</family></os>
+      </activation>
+      <properties>
+        <os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
+      </properties>
+    </profile>
+  </profiles>
 </project>
