--- a/fr.obeo.releng.targetplatform/plugin.xml
+++ b/fr.obeo.releng.targetplatform/plugin.xml
@@ -8,7 +8,7 @@
       <package
             uri="fr.obeo.releng.targetplatform"
             class="fr.obeo.releng.targetplatform.TargetPlatformPackage"
-            genModel="model/Targetplatform.xcore"/>
+            genModel="model/TargetPlatform.xcore"/>
    </extension>
 
   <extension
