Removed p2.inf. Only updates from 2.1.0.

--- a/fr.obeo.releng.targetplatform-feature/build.properties
+++ b/fr.obeo.releng.targetplatform-feature/build.properties
@@ -14,5 +14,4 @@ bin.includes = obeo32.png,\
                feature.xml,\
                license.html,\
                copyright.txt,\
-               about.html,\
-               p2.inf
+               about.html
