clean useless git ignored files
Signed-off-by: Joao Barata <jean.barata@thalesgroup.com>

--- a/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/.gitignore
+++ b/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/.gitignore
@@ -20,3 +20,10 @@
 /TestTargetGeneration.java
 /TestTargetPlatformIndexer.java
 /TestValidation.java
+/.MockMetatadataRepositoryManager.xtendbin
+/.MockProvisioningAgent.xtendbin
+/.TestGrammar.xtendbin
+/.TestTargetConversion.xtendbin
+/.TestTargetGeneration.xtendbin
+/.TestTargetPlatformIndexer.xtendbin
+/.TestValidation.xtendbin
