--- a/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/contentassist/.gitignore
+++ b/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/contentassist/.gitignore
@@ -2,3 +2,4 @@
 /.ReadAndDispatchProgressMonitorWrapper.java._trace
 /ReadAndDispatchProgressMonitorWrapper.java
 /TargetPlatformProposalProvider.java
+/.TargetPlatformProposalProvider.xtendbin
