--- a/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/outline/.gitignore
+++ b/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/outline/.gitignore
@@ -1,2 +1,3 @@
 /.TargetPlatformOutlineTreeProvider.java._trace
 /TargetPlatformOutlineTreeProvider.java
+/.TargetPlatformOutlineTreeProvider.xtendbin
