--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/conversion/.gitignore
@@ -9,3 +9,4 @@
 /TargetPlatformConverter.java
 /TargetPlatformSTRINGValueConverter.java
 /VersionRangeConverter.java
+/.TargetPlatformConverter.xtendbin
