--- a/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/editor/autoedit/.gitignore
+++ b/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/editor/autoedit/.gitignore
@@ -1,3 +1,4 @@
 /.TargetPlatformAutoEditStrategyProvider2.java._trace
 /.TargetPlatformAutoEditStrategyProvider.java._trace
 /TargetPlatformAutoEditStrategyProvider.java
+/.TargetPlatformAutoEditStrategyProvider.xtendbin
