--- a/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/labeling/.gitignore
+++ b/fr.obeo.releng.targetplatform.ui/xtend-gen/fr/obeo/releng/targetplatform/ui/labeling/.gitignore
@@ -2,3 +2,5 @@
 /.TargetPlatformLabelProvider.java._trace
 /TargetPlatformDescriptionLabelProvider.java
 /TargetPlatformLabelProvider.java
+/.TargetPlatformDescriptionLabelProvider.xtendbin
+/.TargetPlatformLabelProvider.xtendbin
