Add generated files

--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
@@ -1,2 +1,5 @@
 /.LocationIndexBuilder.java._trace
 /LocationIndexBuilder.java
+/.CompositeElementResolver.java._trace
+/.ImportVariableManager2.java._trace
+/.ImportVariableManager.java._trace
