Commit generated file

--- a/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/composite_elements/.gitignore
+++ b/fr.obeo.releng.targetplatform.tests/xtend-gen/fr/obeo/releng/targetplatform/tests/composite_elements/.gitignore
@@ -2,3 +2,11 @@
 /.TestOverrideVariableDefinition.java._trace
 /.TestVariableVariableDefinition.java._trace
 /.TestCompositeElementValidation.java._trace
+/.TestCompositeElementValidation.xtendbin
+/.TestCompositeLocation.xtendbin
+/.TestOverrideVariableDefinition.xtendbin
+/.TestVariableVariableDefinition.xtendbin
+/TestCompositeElementValidation.java
+/TestCompositeLocation.java
+/TestOverrideVariableDefinition.java
+/TestVariableVariableDefinition.java
