--- a/fr.obeo.releng.targetplatform/emf-gen/fr/obeo/releng/targetplatform/.gitignore
+++ b/fr.obeo.releng.targetplatform/emf-gen/fr/obeo/releng/targetplatform/.gitignore
@@ -8,3 +8,8 @@
 /IncludeDeclaration.java
 /Location.java
 /Option.java
+/CompositeString.java
+/CompositeStringPart.java
+/StaticString.java
+/VarCall.java
+/VarDefinition.java
