--- a/fr.obeo.releng.targetplatform/emf-gen/fr/obeo/releng/targetplatform/impl/.gitignore
+++ b/fr.obeo.releng.targetplatform/emf-gen/fr/obeo/releng/targetplatform/impl/.gitignore
@@ -6,3 +6,7 @@
 /IUImpl.java
 /IncludeDeclarationImpl.java
 /LocationImpl.java
+/CompositeStringImpl.java
+/StaticStringImpl.java
+/VarCallImpl.java
+/VarDefinitionImpl.java
