--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
@@ -3,3 +3,9 @@
 /.CompositeElementResolver.java._trace
 /.ImportVariableManager2.java._trace
 /.ImportVariableManager.java._trace
+/.CompositeElementResolver.xtendbin
+/.LocationIndexBuilder.xtendbin
+/CompositeElementResolver.java
+/.TargetReloader.java._trace
+/.TargetReloaderImpl.java._trace
+/.CompositeElementResolver2.java._trace
