Commit auto generated files

--- a/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
+++ b/fr.obeo.releng.targetplatform/xtend-gen/fr/obeo/releng/targetplatform/util/.gitignore
@@ -9,3 +9,4 @@
 /.TargetReloader.java._trace
 /.TargetReloaderImpl.java._trace
 /.CompositeElementResolver2.java._trace
+/.ReferenceResolvingErrorClearer.java._trace
